--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,7 @@
       }
       body{
           font-family: "Ubuntu", sans-serif;
-          background-color:  #86A788;
-      }
+background: linear-gradient(135deg, #FFCFDF 0%, #E0F2F1 50%, #B9E5FB 100%) no-repeat fixed;      }
     </style>
   </head>
   <body>
